fixed scrolling on mobile. updated main.tf with object etags

--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ body {
     line-height: 1.5;
     margin: 0;
     height: 100vh;
-    overflow: hidden; /* Prevent scroll caused by centered content exceeding viewport height */
+   /* overflow: hidden; /* Prevent scroll caused by centered content exceeding viewport height */
 }
 
 .container {
